# pytest-result-sender

./: .flake8  .gitignore  conftest.py  msg.md  pyproject.toml  pytest.ini
src/pytest_result_sender/: plugin.py
tests/: test_init.py  test_one.py
