[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Liu", email = "2628255714@qq.com"},
]
dependencies = [
    "pytest>=8.3.3",
    "flake8>=5.0.4",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=5.0.4",
]

# 脚手架，方便使用black、isort、flake8
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | venv
  | buck-out
  | build
  | dist
)/
'''

[tool.pdm.scripts]
check = {composite = [
    "isort .",
    "black .",
    "flake8 .",
]}